# automatic_testing_example_coequarkmatter

./: CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml
src/: CMakeLists.txt  main.cpp  test.cpp  wave_function.cpp  wave_function.hpp
